# hyprpolkitagent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix.yml
assets/: hyprpolkitagent-dbus.in  hyprpolkitagent-service.in
nix/: default.nix  overlays.nix  shell.nix
qml/: main.qml
src/: QMLIntegration.cpp  QMLIntegration.hpp  SigDaemon.cpp  SigDaemon.hpp  main.cpp
src/core/: Agent.cpp  Agent.hpp  PolkitListener.cpp  PolkitListener.hpp
